devops/empwebapp/templates/frontend/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empmngmtsystem-ingress
  annotations:
    appgw.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5173
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 3000
